k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dockerize-test-notify-service
spec:
  selector:
    app: dockerize-test-notify
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
