k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dockerize-test-notify-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: dockerize.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dockerize-test-notify-service
                port:
                  number: 80
